[package]
name = "sol-lock"
version = "1.0.0"
description = "Solana Program Library Transfer Lamports Example"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.10.10"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "1.10.10"
solana-sdk = "1.10.10"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
